--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Fetches Kijiji ads for motorcycles in Toroton and stores them into a Google Spreadsheet.",
   "main": "index.js",
   "scripts": {
+	"start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
