updated env sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
+MIN_PRICE=1000
+MAX_PRICE=4000
 LOCATION_IDS="1700273"
 CATEGORY_IDS="303,304,305,306,307,308"
 CLIENT_EMAIL="yourserviceaccountemailhere@google.com"
